[package]
name = "published_value"
version = "0.1.2"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
description = "Publish a value from one thread to other threads."
documentation = "https://docs.rs/published_value/"
repository = "https://github.com/ggriffiniii/lateral"
license = "MIT"

[dependencies]
